Widget Feature update - Added Market Dominance Widget - Added Bullish/Bearish News Widget - Skeleton on load - Optimized performance by skipping widget request until binance and coinGecko API's synced

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "^10.4.13",
     "base64-cryptocurrency-icons": "^1.1.20",
     "decimal.js": "^10.4.3",
